--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="vasileos&#39; page : I&#39;m glad you&#39;re here">
+    <meta name="description" content="vasileos&#39; page : Tech enthusiast, learner">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
