--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="vasileos&#39; page : Tech enthusiast, learner">
+    <meta name="description" content="vasileos&#39; page : Tech enthusiast">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/vazili89">View on GitHub</a>
 
           <h1 id="project_title">vasileos&#39; page</h1>
-          <h2 id="project_tagline">I&#39;m glad you&#39;re here</h2>
+          <h2 id="project_tagline">Tech enthusiast</h2>
 
         </header>
     </div>
